name:                   sdl2-mixer
version:                0.1.0.0
synopsis:               Raw bindings to SDL_mixer 2.0
description:            Please see README.md
homepage:               https://github.com/oldmanmike/sdl2-mixer
bug-reports:            https://github.com/oldmanmike/sdl2-mixer/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2015 Michael Carpenter
category:               Game
build-type:             Simple
extra-source-files:     LICENSE, README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      SDL.Raw.Mixer
  extra-libraries:      SDL2, SDL_mixer
  pkgconfig-depends:    sdl2 >= 2.0.3
  build-depends:        base >= 4.7 && < 5,
                        sdl2,
                        transformers
  default-language:     Haskell2010

test-suite sdl2-mixer-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base,
                        hspec,
                        QuickCheck,
                        sdl2,
                        sdl2-mixer
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/sdl2-mixer
